--- a/app/src/main/res/layout/fragment_new_loan.xml
+++ b/app/src/main/res/layout/fragment_new_loan.xml
@@ -175,6 +175,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
+                android:gravity="center"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:layout_gravity="center"
                 android:visibility="invisible"
                 app:layout_constraintTop_toBottomOf="@id/period_condition"
@@ -182,28 +185,27 @@
                 app:layout_constraintEnd_toEndOf="parent" />
 
             <Button
-                android:id="@+id/arrange_button"
-                android:layout_marginEnd="12dp"
+                android:id="@+id/submit_button"
+                android:layout_marginEnd="10dp"
                 android:layout_marginTop="6dp"
                 android:layout_marginBottom="6dp"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end"
                 android:text="@string/submit"
+                app:layout_constraintStart_toStartOf="@id/start_guideline"
                 app:layout_constraintTop_toBottomOf="@id/empty_fields_warning_text_view"
                 app:layout_constraintEnd_toEndOf="parent" />
 
             <Button
                 android:id="@+id/to_loan_list_button"
-                android:layout_marginStart="12dp"
                 android:layout_marginTop="6dp"
                 android:layout_marginBottom="6dp"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end"
                 android:text="@string/to_list"
-                app:layout_constraintTop_toBottomOf="@id/empty_fields_warning_text_view"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintEnd_toEndOf="@id/submit_button"
+                app:layout_constraintTop_toBottomOf="@id/submit_button"
+                app:layout_constraintStart_toStartOf="@id/start_guideline" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
