--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
@@ -7,18 +7,19 @@
 
     <TextView
         style="@style/TextAppearance.AppCompat.Headline"
-        android:textColor="@color/blue_191"
         android:id="@+id/welcome_text_view"
-        android:layout_width="wrap_content"
+        android:gravity="center"
+        android:layout_width="match_parent"
         android:text="@string/welcome"
         android:layout_margin="12dp"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
     <ProgressBar
+        android:layout_gravity="center"
         android:id="@+id/loading_progress_bar"
         android:layout_width="wrap_content"
         android:indeterminateDrawable="@drawable/spinner_ring"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
     <LinearLayout
         android:id="@+id/content_linear_layout"
@@ -77,4 +78,4 @@
     </LinearLayout>
 
 
-</LinearLayout>
+</FrameLayout>
