--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,12 +12,12 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-        <item name="fontFamily">@font/gilroy_extra_bold</item>
+        <item name="fontFamily">@font/gilroy_light</item>
         <item name="android:textViewStyle">@style/BaseTextStyle</item>
     </style>
 
     <style name="BaseTextStyle">
-        <item name="android:textColor">@color/blue_191</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:textSize">20sp</item>
     </style>
 </resources>
