--- a/app/src/main/res/layout/fragment_help_dialog.xml
+++ b/app/src/main/res/layout/fragment_help_dialog.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@color/blue_191"
     android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_marginTop="6dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/blue_191"
         android:orientation="vertical">
 
         <ImageView
@@ -20,8 +20,8 @@
             android:layout_height="150dp" />
 
         <TextView
+            style="@style/DialogFragmentText"
             android:id="@+id/help_text"
-            android:textColor="@color/white"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_gravity="center"
@@ -29,10 +29,10 @@
             android:layout_height="wrap_content" />
 
         <TextView
+            style="@style/DialogFragmentText"
             android:layout_marginTop="12dp"
             android:layout_marginBottom="6dp"
             android:id="@+id/help_page_counter"
-            android:textColor="@color/white"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
