--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -40,13 +40,13 @@
         android:name="com.example.chernykhhomework.ui.fragments.LoansListFragment"
         android:label="LoansListFragment">
         <action
-            app:popUpToInclusive="true"
             android:id="@+id/action_loansListFragment_to_loanFragment"
-            app:destination="@id/loanFragment" />
+            app:destination="@id/loanFragment"
+            app:popUpToInclusive="true" />
         <action
-            app:popUpToInclusive="true"
             android:id="@+id/action_loansListFragment_to_newLoanFragment"
-            app:destination="@id/newLoanFragment" />
+            app:destination="@id/newLoanFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/loanFragment"
