--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,15 +2,53 @@
     <!-- Base application theme. -->
     <style name="Theme.ChernykhHomework" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/blue_white</item>
+        <item name="colorPrimaryVariant">@color/dark_grey</item>
+        <item name="colorOnPrimary">@color/blue_white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/orange</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:textViewStyle">@style/BaseTextStyle</item>
+        <item name="recyclerViewStyle">@style/LayoutStyle</item>
+        <item name="toolbarStyle">@style/ToolbarStyle</item>
+        <item name="cardViewStyle">@style/CardViewStyle</item>
+        <item name="android:buttonStyle">@style/ButtonsStyle</item>
+    </style>
+
+    <style name="BaseTextStyle">
+        <item name="android:textColor">@color/blue_white</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="DialogFragmentText" parent="BaseTextStyle" />
+
+    <style name="HeadlineTextStyle" parent="@style/TextAppearance.AppCompat.Headline">
+        <item name="android:textColor">@color/blue_white</item>
+    </style>
+
+    <style name="CardViewStyle">
+        <item name="android:background">@color/grey</item>
+    </style>
+
+    <style name="ToolbarStyle">
+        <item name="android:background">@color/grey</item>
+        <item name="titleTextColor">@color/blue_white</item>
+        <item name="android:padding">5dp</item>
+        <item name="navigationIcon">@drawable/ic_account_circle</item>
+    </style>
+
+    <style name="LayoutStyle">
+        <item name="android:background">@color/brown_grey</item>
+    </style>
+
+    <style name="DialogFragmentStyle">
+        <item name="titleTextColor">@color/blue_white</item>
+        <item name="android:background">@color/grey</item>
+    </style>
+
+    <style name="ButtonsStyle">
+        <item name="android:background">@color/dark_grey</item>
     </style>
 </resources>
