--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,6 +11,8 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="toolbarStyle">@style/ToolbarStyle</item>
+        <item name="recyclerViewStyle">@style/RecyclerViewStyle</item>
         <!-- Customize your theme here. -->
         <item name="fontFamily">@font/gilroy_light</item>
         <item name="android:textViewStyle">@style/BaseTextStyle</item>
@@ -19,5 +21,37 @@
     <style name="BaseTextStyle">
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="DialogFragmentText" parent="BaseTextStyle">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="HeadlineTextStyle" parent="@style/TextAppearance.AppCompat.Headline">
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="DialogFragmentStyle">
+        <item name="android:windowAnimationStyle">@style/WindowAnimation</item>
+    </style>
+
+    <style name="WindowAnimation">
+        <item name="android:windowEnterAnimation">@anim/slide_up_animation</item>
+        <item name="android:windowExitAnimation">@anim/slide_down_animation</item>
+    </style>
+
+    <style name="ToolbarStyle">
+        <item name="android:background">@color/blue_191</item>
+        <item name="titleTextColor">@color/white</item>
+        <item name="android:padding">5dp</item>
+        <item name="navigationIcon">@drawable/ic_account_circle</item>
+    </style>
+
+    <style name="RecyclerViewStyle">
+        <item name="android:background">@color/very_light_grey</item>
+    </style>
+
+    <style name="InfoIconStyle">
+        <item name="color">@color/black</item>
     </style>
 </resources>
