--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,11 +5,7 @@
         <item name="colorPrimary">@color/blue_191</item>
         <item name="colorPrimaryVariant">@color/blue_140</item>
         <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
+
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <item name="toolbarStyle">@style/ToolbarStyle</item>
         <item name="recyclerViewStyle">@style/RecyclerViewStyle</item>
@@ -18,26 +14,26 @@
         <item name="android:textViewStyle">@style/BaseTextStyle</item>
     </style>
 
+    <style name="DialogFragmentText" parent="BaseTextStyle">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="BaseTextStyle">
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">20sp</item>
-    </style>
-
-    <style name="DialogFragmentText" parent="BaseTextStyle">
-        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="HeadlineTextStyle" parent="@style/TextAppearance.AppCompat.Headline">
         <item name="android:textColor">@color/black</item>
     </style>
 
-    <style name="DialogFragmentStyle">
-        <item name="android:windowAnimationStyle">@style/WindowAnimation</item>
-    </style>
-
     <style name="WindowAnimation">
         <item name="android:windowEnterAnimation">@anim/slide_up_animation</item>
         <item name="android:windowExitAnimation">@anim/slide_down_animation</item>
+    </style>
+
+    <style name="CardViewStyle">
+        <item name="cardBackgroundColor">@color/blue_191</item>
     </style>
 
     <style name="ToolbarStyle">
@@ -51,7 +47,4 @@
         <item name="android:background">@color/very_light_grey</item>
     </style>
 
-    <style name="InfoIconStyle">
-        <item name="color">@color/black</item>
-    </style>
 </resources>
