--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -15,6 +15,7 @@
         android:layout_margin="12dp"
         android:layout_height="match_parent" />
 
+
     <ProgressBar
         android:layout_gravity="center"
         android:id="@+id/loading_progress_bar"
@@ -41,6 +42,7 @@
 
         <EditText
             android:id="@+id/name_edit_text"
+            android:inputType="text"
             android:layout_gravity="center"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
